--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Example'
+include ':react-native-turbolinks'
+project(':react-native-turbolinks').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-turbolinks/android')
 
 include ':app'
