--- a/package.json
+++ b/package.json
@@ -10,9 +10,5 @@
     "react-native"
   ],
   "author": "Lázaro Nixon",
-  "license": "MIT",
-  "peerDependencies": {
-    "react": "16.2.0",
-    "react-native": "^0.51.0"
-  }
+  "license": "MIT"
 }
