--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "react-native"
   ],
   "author": "Lázaro Nixon",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^16.2.0"
+  }
 }
