Set version on example

--- a/Example/package.json
+++ b/Example/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "^0.51.0",
-    "react-native-turbolinks": "file:../",
+    "react-native-turbolinks": "0.0.1",
     "pubsub-js": "^1.5.7"
   }
 }
