--- a/Example/package.json
+++ b/Example/package.json
@@ -6,9 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "pubsub-js": "^1.5.7",
     "react": "16.0.0",
     "react-native": "^0.51.0",
-    "react-native-turbolinks": "latest",
-    "pubsub-js": "^1.5.7"
+    "react-native-swift": "^0.23.0",
+    "react-native-turbolinks": "latest"
   }
 }
