--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application>
-        <activity android:name=".CustomActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".WebActivity" android:label="@string/app_name"></activity>
         <activity android:name=".NativeActivity" android:label="@string/app_name"></activity>
     </application>
 
