--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application>
-        <activity android:name=".WebActivity" android:label="@string/app_name"></activity>
-        <activity android:name=".NativeActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.WebActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.NativeActivity" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
