--- a/Example/package.json
+++ b/Example/package.json
@@ -9,6 +9,6 @@
     "react": "16.2.0",
     "react-native": "^0.52.0",
     "react-native-swift": "^0.23.0",
-    "react-native-turbolinks": "latest"
+    "react-native-turbolinks": "file:../"
   }
 }
