Tabbar android initial work

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    compile "com.facebook.react:react-native:+"
+    compile "com.android.support:design:27.0.2"
     compile "com.basecamp:turbolinks:1.0.8"
 }
