--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity android:name=".activities.WebActivity" android:label="@string/app_name"></activity>
         <activity android:name=".activities.NativeActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.TabbedActivity" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
