--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "turbolinks"
   ],
   "dependencies": {
-    "react": "16.2.0"
+    "react": "^16.3.0-alpha.1"
   },
   "peerDependencies": {
     "react-native-swift": "^0.23.0"
