--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "native",
     "turbolinks"
   ],
-  "dependencies": {
-    "react": "^16.3.0-alpha.1"
-  },
   "peerDependencies": {
+    "react-native": "^0.54.0",
     "react-native-swift": "^0.23.0"
   }
 }
