--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application>
-        <activity android:name=".activities.WebActivity" android:label="@string/app_name"></activity>
-        <activity android:name=".activities.NativeActivity" android:label="@string/app_name"></activity>
-        <activity android:name=".activities.TabbedActivity" android:label="@string/app_name"></activity>
+        <activity android:name="com.lazaronixon.rnturbolinks.activities.WebActivity" android:label="@string/app_name"></activity>
+        <activity android:name="com.lazaronixon.rnturbolinks.activities.NativeActivity" android:label="@string/app_name"></activity>
+        <activity android:name="com.lazaronixon.rnturbolinks.activities.TabbedActivity" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
