--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.reactlibrary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lazaronixon.rnturbolinks">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application>
-        <activity android:name="com.lazaronixon.rnturbolinks.activities.WebActivity" android:label="@string/app_name"></activity>
-        <activity android:name="com.lazaronixon.rnturbolinks.activities.NativeActivity" android:label="@string/app_name"></activity>
-        <activity android:name="com.lazaronixon.rnturbolinks.activities.TabbedActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.WebActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.NativeActivity" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.TabbedActivity" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
