--- a/Example/package.json
+++ b/Example/package.json
@@ -9,6 +9,6 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "^0.54.0",
     "react-native-swift": "^0.23.0",
-    "react-native-turbolinks": "file:../"
+    "react-native-turbolinks": "latest"
   }
 }
