Refactor navigationBar android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile "com.facebook.react:react-native:+"
     compile "com.android.support:design:27.0.2"
     compile "com.basecamp:turbolinks:1.0.8"
+    compile "com.aurelhubert:ahbottomnavigation:2.2.0"
 }
