--- a/Example/.flowconfig
+++ b/Example/.flowconfig
@@ -25,6 +25,9 @@ node_modules/react-native/flow/
 [options]
 emoji=true
 
+esproposal.optional_chaining=enable
+esproposal.nullish_coalescing=enable
+
 module.system=haste
 
 munge_underscores=true
@@ -45,4 +48,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
 unsafe.enable_getters_and_setters=true
 
 [version]
-^0.65.0
+^0.78.0
