--- a/Example/package.json
+++ b/Example/package.json
@@ -6,9 +6,13 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "16.4.1",
-    "react-native": "0.56.0",
+    "react": "^16.5.0",
+    "react-native": "^0.57.0",
     "react-native-swift": "^1.2.1",
     "react-native-turbolinks": "file:../"
+  },
+  "devDependencies": {
+    "get-dev-paths": "^0.1.0",
+    "babel-preset-react-native": "^4.0.0"
   }
 }
