--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "native",
     "turbolinks"
   ],
+  "rnpm": {
+    "commands": {
+      "postlink": "node node_modules/react-native-turbolinks/scripts/postlink/run"
+    }
+  },
   "peerDependencies": {
     "react-native": "^0.57.0",
     "react-native-swift": "^1.2.1"
