--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     }
   },
   "peerDependencies": {
-    "react-native": "^0.57.0",
-    "react-native-swift": "^1.2.1"
+    "react-native": "^0.57.0"
   }
 }
