--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -137,7 +137,7 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-turbolinks')
+    compile project(':react-native-turbolinks')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
