--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-webview')
     compile project(':react-native-turbolinks')
     implementation fileTree(dir: "libs", include: ["*.jar"])
