--- a/Example/package.json
+++ b/Example/package.json
@@ -8,10 +8,8 @@
   "dependencies": {
     "react": "^16.5.0",
     "react-native": "^0.57.0",
-    "react-native-gesture-handler": "^1.0.10",
-    "react-native-turbolinks": "file:../",
     "react-native-webview": "^2.8.1",
-    "react-navigation": "^3.0.2"
+    "react-native-turbolinks": "file:../"    
   },
   "devDependencies": {
     "get-dev-paths": "^0.1.0"
