--- a/Example/package.json
+++ b/Example/package.json
@@ -6,10 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "^16.5.0",
-    "react-native": "^0.57.0",
-    "react-native-webview": "^2.8.1",
-    "react-native-turbolinks": "file:../"
+    "react": "16.6.1",
+    "react-native": "0.57.7",
+    "react-native-turbolinks": "file:../",
+    "react-native-webview": "^2.8.1"
   },
   "devDependencies": {
     "get-dev-paths": "^0.1.0"
