--- a/Example/package.json
+++ b/Example/package.json
@@ -12,6 +12,7 @@
     "react-native-webview": "^2.8.1"
   },
   "devDependencies": {
-    "get-dev-paths": "^0.1.0"
+    "get-dev-paths": "^0.1.0",
+    "metro-react-native-babel-preset": "0.50.0"
   }
 }
