--- a/Example/package.json
+++ b/Example/package.json
@@ -8,11 +8,10 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.7",
-    "react-native-turbolinks": "file:../",
+    "react-native-turbolinks": "latest",
     "react-native-webview": "^2.8.1"
   },
   "devDependencies": {
-    "get-dev-paths": "^0.1.0",
     "metro-react-native-babel-preset": "0.50.0"
   }
 }
