--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "peerDependencies": {
     "react-native": "^0.57.0"
+  },
+  "devDependencies": {
+    "@babel/runtime": "^7.2.0"
   }
 }
