--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,24 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.3.2'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -27,12 +28,12 @@ android {
 }
 
 repositories {
-    mavenCentral()
+    google()
     jcenter()
 }
 
 dependencies {
     implementation "com.facebook.react:react-native:+"
-    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:design:28.0.0"
     implementation "com.basecamp:turbolinks:1.0.8"
 }
