--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -1,7 +1,5 @@
 rootProject.name = 'Example'
-include ':react-native-webview'
-project(':react-native-webview').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview/android')
 include ':react-native-turbolinks'
 project(':react-native-turbolinks').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-turbolinks/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
