--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-
 # OSX
 #
 .DS_Store
-
-# node.js
-#
-node_modules/
-npm-debug.log
-yarn-error.log
-  
 
 # Xcode
 #
@@ -28,8 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
-      
 
 # Android/IntelliJ
 #
@@ -39,8 +29,31 @@ build/
 local.properties
 *.iml
 
+# node.js
+#
+node_modules/
+npm-debug.log
+yarn-error.log
+
 # BUCK
 buck-out/
 \.buckd/
 *.keystore
-      
+!debug.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
+
+# CocoaPods
+/ios/Pods/
