--- a/Example/package.json
+++ b/Example/package.json
@@ -3,16 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "preinstall": "cd .. && npm install"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.3",
-    "react-native-turbolinks": "file:../",
-    "react-native-webview": "^5.6.0"
+    "react": "16.9.0",
+    "react-native": "0.61.2",
+    "react-native-turbolinks": "file:..",
+    "react-native-webview": "^7.4.0"
   },
   "devDependencies": {
-    "metro-react-native-babel-preset": "^0.53.1"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
