--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.2'
     }
 }
 
@@ -34,6 +34,9 @@ repositories {
 
 dependencies {
     implementation "com.facebook.react:react-native:+"
-    implementation "com.android.support:design:28.0.0"
-    implementation "com.basecamp:turbolinks:1.0.8"
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "com.google.android.material:material:1.1.0-alpha01"
+    implementation "com.basecamp:turbolinks:1.0.9"
+    implementation "com.google.code.gson:gson:2.8.0"
+    implementation "org.apache.commons:commons-lang3:3.4"
 }
