Share process pool with react-native-webview

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-turbolinks",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Turbolinks for React Native.",
   "author": "Lázaro Nixon <lazaronixon@hotmail.com>",
   "homepage": "https://github.com/lazaronixon/react-native-turbolinks",
@@ -20,6 +20,7 @@
     "postinstall": "node scripts/postinstall/run"
   },
   "peerDependencies": {
-    "react-native": "^0.61"
+    "react-native": "^0.61",
+    "react-native-webview": "^7.4"
   }
 }
