--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-# These are supported funding model platforms
-
-custom: ["https://www.twitter.com/lazaronixon"]
+ko_fi: lazaronixon
+custom: twitter.com/lazaronixon
